connected to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -10,5 +10,17 @@
   <body>
     <div id="main"></div>
   </body>
+  <script src="https://www.gstatic.com/firebasejs/3.8.0/firebase.js"></script>
+  <script>
+    var config = {
+      apiKey: "AIzaSyB9tm_kLW-G1lrH8MStDXW9a-S2S-rr7Oo",
+      authDomain: "lab3-2e26b.firebaseapp.com",
+      databaseURL: "https://lab3-2e26b.firebaseio.com",
+      projectId: "lab3-2e26b",
+      storageBucket: "lab3-2e26b.appspot.com",
+      messagingSenderId: "970593389455"
+    };
+    firebase.initializeApp(config);
+  </script>
   <script src="build/bundle.js"  charset="utf-8"></script>
 </html>
